mingle/test/gauge/smokeTests/libs/com.thoughtworks.twist.driver.sahi_3.0.0.13132-b6ff0d9ea3753c/sahi/userdata/scripts/demo/shouldfail/click_null.sah
_click(_link("does not exist"));